* 2007-08-15 - thorben.betten@open-xchange.com

 - Special HTML entities moved to external properties file
 - Enhanced text2html conversion through including more HTML entities
 
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: new property file "HTMLEntities.properties" which
   holds known HTML entities and their character mapping
#####################################################

* 2007-08-15 - marcus.klein@open-xchange.com

 - Removed unused JNI SSL stuff.
 - Removed unused classes and methods.

* 2007-08-14 - martin.kauss@open-xchange.com

 - Fixed bug #8567. An exception of a recurring appointment could be moved
   into a different folder than the main object. This will now be avoided.
   In addition an exception can not have a different private state than the
   main object.

* 2007-08-14 - tobias.prinz@open-xchange.com

 - Bugfix #6825: Implemented new classes for translating fieldnames for
   Appointments/Calendar and Tasks. Now the users gets better hints what
   fields could not be imported.

* 2007-08-14 - thorben.betten@open-xchange.com

 - More reliable sorting when requesting user's new messages
 - Removed some warnings from IDE
 - Fixed too early removal of temporary uploaded files if message transport
   fails
 - Removing message cache entries on delete

* 2007-08-14 - marcus.klein@open-xchange.com

 - Marked some methods for participants deprecated to prevent coding problems.

* 2007-08-13 - marcus.klein@open-xchange.com

 - Bugfix #8410: Removed duplicate write database connection.

* 2007-08-13 - sebastian.kauss@open-xchange.com

 - Fixed Bug #8785 - Only iCal imported fullday holiday appointments 
                     are shown on the start page. Added new ajax method 
                     newappointments for portal search.

 - Fixed Bug #8760 - Appointment conflicts were not in ajax response after
                     update request.

* 2007-08-13 - martin.kauss@open-xchange.com
